--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 0rem;
 }
 
 #home {
@@ -7,7 +8,7 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 40rem;
+    height: 100vh;
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -72,4 +73,69 @@ body{
     bottom: 0;
     width: 100%;
     border-bottom: 5px solid #9ab6f3;
+}
+
+/* About section */
+#about h2{
+    margin-top: 5rem;
+    text-align: center;
+    font-size: 38px;
+    margin-bottom: 0rem;
+}
+
+#about hr{
+    width: 3.5rem;
+    height: 4px;
+    background-color: #000000;
+    margin-top: 0;
+}
+
+#about .skills{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+    
+}
+
+#about .skill{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20rem;
+    text-align: center;
+}
+
+#about .icon{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #6e9afa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#about .icon i{
+    color: #ffffff;
+    font-size: 3rem;
+}
+
+#about .con{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 3rem;
+}
+
+#about .con .left{
+    width: 300px;
+}
+
+#about .profile-img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-image: url('../img/nero.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
